--- a/gui.ui
+++ b/gui.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>879</width>
-    <height>758</height>
+    <width>868</width>
+    <height>738</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -50,7 +50,7 @@
       <item>
        <widget class="QLabel" name="label_2">
         <property name="text">
-         <string>Lazo de control 1</string>
+         <string>Lazo de control 1 (motor)</string>
         </property>
        </widget>
       </item>
@@ -261,22 +261,12 @@
        </layout>
       </item>
       <item>
-       <spacer name="verticalSpacer_2">
-        <property name="orientation">
-         <enum>Qt::Vertical</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>20</width>
-          <height>40</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-      <item>
        <spacer name="verticalSpacer">
         <property name="orientation">
          <enum>Qt::Vertical</enum>
+        </property>
+        <property name="sizeType">
+         <enum>QSizePolicy::MinimumExpanding</enum>
         </property>
         <property name="sizeHint" stdset="0">
          <size>
@@ -289,7 +279,7 @@
       <item>
        <widget class="QLabel" name="label">
         <property name="text">
-         <string>Lazo de control 2</string>
+         <string>Lazo de control 2 (crucero)</string>
         </property>
        </widget>
       </item>
@@ -318,7 +308,7 @@
         <item row="5" column="2">
          <widget class="QLineEdit" name="kp2Input"/>
         </item>
-        <item row="3" column="1">
+        <item row="3" column="1" alignment="Qt::AlignHCenter">
          <widget class="QLabel" name="VActualRef2">
           <property name="text">
            <string/>
@@ -332,7 +322,7 @@
           </property>
          </widget>
         </item>
-        <item row="5" column="1">
+        <item row="5" column="1" alignment="Qt::AlignHCenter">
          <widget class="QLabel" name="VActualKp2">
           <property name="text">
            <string/>
@@ -367,7 +357,7 @@
       <item>
        <widget class="QTableWidget" name="tableWidget2">
         <property name="sizePolicy">
-         <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
+         <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
           <horstretch>1</horstretch>
           <verstretch>1</verstretch>
          </sizepolicy>
@@ -438,19 +428,6 @@
        </widget>
       </item>
       <item>
-       <spacer name="verticalSpacer_4">
-        <property name="orientation">
-         <enum>Qt::Vertical</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>20</width>
-          <height>40</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-      <item>
        <layout class="QHBoxLayout" name="horizontalLayout_4">
         <item>
          <spacer name="horizontalSpacer">
@@ -488,12 +465,9 @@
        </layout>
       </item>
       <item>
-       <spacer name="verticalSpacer_5">
+       <spacer name="verticalSpacer_2">
         <property name="orientation">
          <enum>Qt::Vertical</enum>
-        </property>
-        <property name="sizeType">
-         <enum>QSizePolicy::Fixed</enum>
         </property>
         <property name="sizeHint" stdset="0">
          <size>
@@ -512,7 +486,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>879</width>
+     <width>868</width>
      <height>25</height>
     </rect>
    </property>
